<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            tools:context="kuta.adrian.cv.HomeFragment">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardCornerRadius="4dp"
			card_view:cardElevation="5dp">

			<RelativeLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content">

				<ImageView
					android:id="@+id/my_image"
					android:layout_width="100dp"
					android:layout_height="wrap_content"
					android:adjustViewBounds="true"
					android:contentDescription="@string/my_image"/>

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_toEndOf="@+id/my_image"
					android:layout_toRightOf="@+id/my_image"
					android:orientation="vertical">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/my_name"
						android:textSize="25sp"
						android:textStyle="bold"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/android_developer"
						android:textSize="20sp"/>

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="5dp"
						android:text="@string/about_me"/>
				</LinearLayout>
			</RelativeLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			card_view:cardCornerRadius="4dp"
			card_view:cardElevation="5dp">

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TableRow
					android:layout_width="wrap_content"
					android:layout_height="wrap_content">

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/personal_data"
						android:textSize="25sp"
						android:textStyle="bold"/>
				</TableRow>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:drawableLeft="@drawable/ic_cake_black_24dp"
					android:drawablePadding="@dimen/personal_data_drawable_padding"
					android:drawableStart="@drawable/ic_cake_black_24dp"
					android:paddingEnd="@dimen/personal_data_side_padding"
					android:paddingLeft="@dimen/personal_data_side_padding"
					android:paddingRight="@dimen/personal_data_side_padding"
					android:paddingStart="@dimen/personal_data_side_padding"
					android:paddingTop="@dimen/personal_data_top_padding"
					android:text="@string/birthdate"
					android:textSize="20sp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:drawableLeft="@drawable/ic_home_black_24dp"
					android:drawablePadding="@dimen/personal_data_drawable_padding"
					android:drawableStart="@drawable/ic_home_black_24dp"
					android:paddingEnd="@dimen/personal_data_side_padding"
					android:paddingLeft="@dimen/personal_data_side_padding"
					android:paddingRight="@dimen/personal_data_side_padding"
					android:paddingStart="@dimen/personal_data_side_padding"
					android:paddingTop="@dimen/personal_data_top_padding"
					android:text="@string/wroclaw"
					android:textSize="20sp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:drawableLeft="@drawable/ic_email_black_24dp"
					android:drawablePadding="@dimen/personal_data_drawable_padding"
					android:drawableStart="@drawable/ic_email_black_24dp"
					android:paddingEnd="@dimen/personal_data_side_padding"
					android:paddingLeft="@dimen/personal_data_side_padding"
					android:paddingRight="@dimen/personal_data_side_padding"
					android:paddingStart="@dimen/personal_data_side_padding"
					android:paddingTop="@dimen/personal_data_top_padding"
					android:text="@string/mail"
					android:textSize="20sp"/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:drawableLeft="@drawable/ic_phone_black_24dp"
					android:drawablePadding="@dimen/personal_data_drawable_padding"
					android:drawableStart="@drawable/ic_phone_black_24dp"
					android:paddingEnd="@dimen/personal_data_side_padding"
					android:paddingLeft="@dimen/personal_data_side_padding"
					android:paddingRight="@dimen/personal_data_side_padding"
					android:paddingStart="@dimen/personal_data_side_padding"
					android:paddingTop="@dimen/personal_data_top_padding"
					android:text="@string/phone_number"
					android:textSize="20sp"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			xmlns:card_view="http://schemas.android.com/apk/res-auto"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			card_view:cardCornerRadius="4dp"
			card_view:cardElevation="5dp">

		</android.support.v7.widget.CardView>
	</LinearLayout>
</ScrollView>
