<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#37839b"
                tools:context=".MainActivity">

	<kuta.adrian.cv.MyImageSwitcher
		android:id="@+id/background_image"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:contentDescription="@string/background_image"/>

	<com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
		android:id="@+id/sliding_tabs"
		android:layout_width="match_parent"
		android:layout_height="@dimen/tab_height"/>

	<android.support.v4.view.ViewPager
		android:id="@+id/viewPager"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginTop="@dimen/tab_height"
		android:visibility="gone"/>

	<io.codetail.widget.RevealFrameLayout
		android:id="@+id/splash"
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentBottom="true"
		android:layout_alignParentEnd="true"
		android:layout_alignParentRight="true">


		<TextView
			android:id="@+id/cv_textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:text="@string/cv"
			android:textSize="70sp"
			android:textStyle="bold"/>

		<TextView
			android:id="@+id/start"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="#72FFFFFF"
			android:gravity="center_vertical|end"
			android:padding="16dp"
			android:text="@string/start"
			android:textSize="@dimen/text_medium"/>

	</io.codetail.widget.RevealFrameLayout>

	<View
		android:id="@+id/blue_overlay"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_alignParentBottom="true"
		android:background="#220000FF"/>

</RelativeLayout>
